--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
 *{
     margin: 0;
     background-color: lightpink;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
+h1{
+    color: white;
+    text-align: center;
+    margin-top: 1em;
+}
+
 
