--- a/style.css
+++ b/style.css
@@ -10,4 +10,9 @@ h1{
     margin-top: 1em;
 }
 
-
+.slika1{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
+}
