--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ h1{
     margin-left: auto;
     margin-right: auto;
     max-height: 30%;
+    max-width: 30%;
 }
 
 .cestitka{
@@ -47,7 +48,8 @@ h1{
     margin: 1em;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-content: space-between;
+    justify-content: space-evenly;
 }
 
 @media screen and (max-width: 800px) {
