--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ h1{
         align-items: center;
         margin-left: auto;
         margin-right: auto;
-        width: 90%;
+        /* width: 90%; */
     }
     
     .gallery-item{
