--- a/slick/slick-theme.css
+++ b/slick/slick-theme.css
@@ -27,8 +27,8 @@
 
     display: block;
 
-    width: 300px;
-    height: 300px;
+    width: 30px;
+    height: 30px;
     padding: 0;
     -webkit-transform: translate(0, -50%);
     -ms-transform: translate(0, -50%);
@@ -41,6 +41,11 @@
     outline: none;
     background: transparent;
 }
+
+.slick-next{
+    right: -5px;
+}
+
 .slick-prev:hover,
 .slick-prev:focus,
 .slick-next:hover,
