--- a/style.css
+++ b/style.css
@@ -93,8 +93,10 @@ h1{
     }
 
     .text-cestitke{
+        margin: 1em;
         display: flex;
         flex-direction: column;
-        justify-content: flex-start;
+        align-content: space-between;
+        justify-content: space-evenly;
     }
 }
